--- a/src/app/features/user/user-list/user-list.component.html
+++ b/src/app/features/user/user-list/user-list.component.html
@@ -2,7 +2,11 @@
         <app-action>
           <button mat-flat-button class="btn" >Create</button>
         </app-action>
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 full-width">
+        <div class="mat-table-responsive">
+          <div *ngIf="isLoading" class="spinner-container">
+              <mat-spinner></mat-spinner>
+          </div>
+        <table *ngIf="!isLoading" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 full-width">
           <!-- First Name -->
           <ng-container matColumnDef="firstName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
@@ -30,13 +34,13 @@
           <!-- Role -->
           <ng-container matColumnDef="role">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
-            <td mat-cell *matCellDef="let user">{{UserRole[user.userRole]}}</td>
+            <td mat-cell *matCellDef="let user">{{user.userRole}}</td>
           </ng-container>
       
           <!-- Center -->
           <ng-container matColumnDef="center">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Center</th>
-            <td mat-cell *matCellDef="let user">{{user.center?.name}}</td>
+            <td mat-cell *matCellDef="let user">{{user.center?.description}}</td>
           </ng-container>
       
           <!-- Languages -->
@@ -58,7 +62,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-      
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+      <mat-paginator *ngIf="!isLoading" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       
 </app-container>
