--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <!-- Toolbar always on top -->
 <mat-toolbar color="primary" class="mat-elevation-z4">
   <button mat-icon-button (click)="drawer.toggle()">
-    <mat-icon>menu</mat-icon>
+    <mat-icon matListIcon>menu</mat-icon>
   </button>
   <span class="img-icon"></span>
 
   <span class="spacer"></span>
 
   <button mat-icon-button aria-label="Notifications">
-    <mat-icon>notifications</mat-icon>
+    <mat-icon matListIcon>notifications</mat-icon>
   </button>
 
 <!-- Profile Button with Dropdown Menu -->
 <button mat-icon-button [matMenuTriggerFor]="userMenu" aria-label="Profile">
-  <mat-icon>account_circle</mat-icon>
+  <mat-icon matListIcon>account_circle</mat-icon>
 </button>
 
 </mat-toolbar>
@@ -21,11 +21,11 @@
 <!-- Menu Definition -->
 <mat-menu #userMenu="matMenu" (click)="goToSettings()">
   <button mat-menu-item>
-    <mat-icon>settings</mat-icon>
+    <mat-icon matListIcon>settings</mat-icon>
     <span>Settings</span>
   </button>
   <button mat-menu-item (click)="logout()">
-    <mat-icon>logout</mat-icon>
+    <mat-icon matListIcon>logout</mat-icon>
     <span>Logout</span>
   </button>
 </mat-menu>
@@ -43,21 +43,21 @@
        </div>
       </a>
     
-      <a mat-list-item class="nav-item" href="/demand">
+      <a mat-list-item class="nav-item" href="/outgoing-demands">
         <div>
           <mat-icon matListIcon>send</mat-icon>
           <span>Outgoing</span>
         </div>
       </a>
     
-      <a mat-list-item class="nav-item" href="/demand">
+      <a mat-list-item class="nav-item" href="/incoming-demands">
         <div>
           <mat-icon matListIcon>inbox</mat-icon>
           <span>Incoming</span>
         </div>
       </a>
     
-      <a mat-list-item class="nav-item" href="/user">
+      <a mat-list-item class="nav-item" href="/users">
         <div>
           <mat-icon matListIcon>group</mat-icon>
           <span>Users</span>
