--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,4 +1,6 @@
+@use 'sass:map';
 @use '@angular/material' as mat;
+@use '../../../../styles/redcross-theme.scss' as redcross-theme;
 
 .sidenav-container {
   height: 100vh;
@@ -18,13 +20,12 @@
   padding: 2px;
   display: flex;
   flex-direction: column;
-  background-color: lavender;
+  background-color: map.get(redcross-theme.$primary-palette, 100);  
 }
 
 .main {
   flex: 1 0 auto;
   overflow-y: auto;
-  
 }
 
 mat-toolbar {
@@ -49,15 +50,19 @@ mat-nav-list a  div{
   ));
 }
 
+mat-icon[matListIcon] {
+  color: map.get(redcross-theme.$primary-palette, 30);  
+}
+
+
 .nav-item mat-icon[matListIcon] {
   font-size: 28px;
-  color: #005cbb;
   margin-right: 0.6rem;
 }
 
 .img-icon {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 4rem;
+  height: 4rem;
   background-image: url('../../../assets/logo.png');
   background-size: contain;
   background-repeat: no-repeat;
