--- a/src/app/shared/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.scss
@@ -12,12 +12,12 @@
 
 .step{
   background-color:  map.get(redcross-theme.$primary-palette, 35);
-  padding: .5rem 0;
-  width: 6rem;
+  padding: .3rem 1rem;
   text-align: center;
   position: relative;
-  outline-width: 0px;
+  //outline: 1px solid green;
   border-right: 14px solid map.get(redcross-theme.$primary-palette, 100);
+  border-radius: 4px;
 }
 
 .step::after{
@@ -30,10 +30,11 @@
   z-index: 1;
   width: 0;
   height: 0;
-  border-left: 12px solid  map.get(redcross-theme.$primary-palette, 35);;
+  border-radius: 2px;
+  border-left: 12px solid  map.get(redcross-theme.$primary-palette, 35);
   border-right: 12px solid transparent;
-  border-bottom: 17px solid transparent;
-  border-top: 17px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-top: 15px solid transparent;
   box-sizing: border-box;
 }
 
@@ -49,5 +50,14 @@
 .active {
   font-weight: bold;
   color: map.get(redcross-theme.$primary-palette, 95);
+}
+
+
+.step:last-child {
+  background-color: map.get(redcross-theme.$primary-palette, 40);
+}
+
+.step:last-child::after {
+  border-left: 12px solid  map.get(redcross-theme.$primary-palette, 40);
 }
 
