--- a/src/app/shared/components/demand-type-badge/demand-type-badge.component.html
+++ b/src/app/shared/components/demand-type-badge/demand-type-badge.component.html
@@ -1,4 +1,4 @@
 <span>
-     <mat-icon >{{ getIcon(demandType) }}</mat-icon>
+     <mat-icon [style.color]="'gray'" >{{ getIcon(demandType) }}</mat-icon>
      {{demandType}}
 </span>
