--- a/src/app/features/demand/demand-list/demand-list.component.html
+++ b/src/app/features/demand/demand-list/demand-list.component.html
@@ -7,10 +7,12 @@
               <mat-spinner></mat-spinner>
           </div>
         <table *ngIf="!isLoading" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 full-width">
-          <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-        <td mat-cell *matCellDef="let demand"> {{ demand.description }} </td>
+          <!-- Subject Column -->
+      <ng-container matColumnDef="subject">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Subject </th>
+        <td mat-cell *matCellDef="let demand">
+          <app-long-text-container [description]="demand.description" [subject]="demand.subject"></app-long-text-container>
+        </td>
       </ng-container>
 
       <!-- Priority Column -->
