--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -1,14 +1,16 @@
-<nav aria-label="Breadcrumb" >
+<nav aria-label="Breadcrumb" *ngIf="crumbs.length > 1">
   <ol class="stepper">
-    <li *ngFor="let crumb of breadcrumbService.breadcrumbs; let last = last"
-        [class.active]="last"
-        class="step"
-        [attr.aria-current]="last ? 'page' : null">
+    <li
+      *ngFor="let crumb of crumbs; let last = last"
+      class="step"
+      [class.active]="last"
+      [attr.aria-current]="last ? 'page' : null"
+    >
       <ng-container *ngIf="!last">
         <a [routerLink]="crumb.url">{{ crumb.label }}</a>
       </ng-container>
       <ng-container *ngIf="last">
-        {{ crumb.label }}
+        <span>{{ crumb.label }}</span>
       </ng-container>
     </li>
   </ol>
