--- a/src/app/shared/components/long-text-container/long-text-container.component.html
+++ b/src/app/shared/components/long-text-container/long-text-container.component.html
@@ -1,1 +1,1 @@
-<span [matTooltip]="description"  [matTooltipPosition] = "'below'">{{subject}}</span>
+<span [matTooltip]="tooltip"  [matTooltipPosition] = "'below'">{{display}}</span>
