--- a/src/app/features/user/user-create/user-create.component.html
+++ b/src/app/features/user/user-create/user-create.component.html
@@ -1,25 +1,66 @@
-<form [formGroup]="userForm" (ngSubmit)="submit()">
+<h2 mat-dialog-title class="title">Create User</h2>
 
-    <mat-form-field appearance="fill">
-      <mat-label>First Name</mat-label>
-      <input matInput formControlName="firstName">
-    </mat-form-field>
-  
-    <mat-form-field appearance="fill">
-      <mat-label>Last Name</mat-label>
-      <input matInput formControlName="lastName">
-    </mat-form-field>
-  
-    <mat-form-field appearance="fill">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" formControlName="email">
-    </mat-form-field>
-  
-    <mat-form-field appearance="fill">
-      <mat-label>Telephone</mat-label>
-      <input matInput formControlName="telephone">
-    </mat-form-field>
-  
-    <button mat-flat-button color="primary" type="submit">Submit</button>
+<mat-dialog-content >
+  <form [formGroup]="userForm" class="content">
+
+    <div class="form-column">
+        <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input matInput formControlName="lastName" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input matInput formControlName="firstName" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+        <mat-label>Languages Spoken</mat-label>
+        <mat-select formControlName="languages" multiple>
+          <mat-option *ngFor="let l of languages" [value]="l.id">
+            {{ l.description }}
+          </mat-option>
+        </mat-select>
+  </mat-form-field>
+    </div>
+
+    <div class="form-row">
+        <mat-form-field appearance="outline">
+        <mat-label>Telephone</mat-label>
+        <input matInput formControlName="telephone" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" />
+        </mat-form-field>
+  </div>
+
+      <div class="form-row">
+        <mat-form-field appearance="outline">
+        <mat-label>Center</mat-label>
+        <mat-select formControlName="centerId">
+            <mat-option *ngFor="let c of centers; index as i" [value]="c.id">{{ c.description }}</mat-option>
+        </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+        <mat-label>Role</mat-label>
+        <mat-select formControlName="userRole">
+            <mat-option *ngFor="let r of roles; index as i" [value]="i">{{ r }}</mat-option>
+        </mat-select>
+        </mat-form-field>
+  </div>
+ 
   </form>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+   <button mat-flat-button color="primary" (click)="onCancel()">
+    Cancel
+  </button>
+  <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="!userForm.valid">
+    Save
+  </button>
+</mat-dialog-actions>
   
