--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <!-- Toolbar always on top -->
 <mat-toolbar color="primary" class="mat-elevation-z4">
-  <button mat-icon-button (click)="drawer.toggle()">
+  <button mat-icon-button (click)="drawer.toggle()" *ngIf="isLoggedIn$ | async">
     <mat-icon matListIcon>menu</mat-icon>
   </button>
   <span class="img-icon"></span>
 
   <span class="spacer"></span>
 
-  <button mat-icon-button aria-label="Notifications">
+  <button mat-icon-button aria-label="Notifications" *ngIf="isLoggedIn$ | async">
     <mat-icon matListIcon>notifications</mat-icon>
   </button>
 
 <!-- Profile Button with Dropdown Menu -->
-<button mat-icon-button [matMenuTriggerFor]="userMenu" aria-label="Profile">
+<button mat-icon-button [matMenuTriggerFor]="userMenu" aria-label="Profile" *ngIf="isLoggedIn$ | async">
   <mat-icon matListIcon>account_circle</mat-icon>
 </button>
 
@@ -24,14 +24,14 @@
     <mat-icon matListIcon>settings</mat-icon>
     <span>Settings</span>
   </button>
-  <button mat-menu-item (click)="logout()">
+  <button mat-menu-item (click)="logout()" >
     <mat-icon matListIcon>logout</mat-icon>
     <span>Logout</span>
   </button>
 </mat-menu>
 
 <!-- Sidenav container below toolbar -->
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container" >
   
   <!-- Drawer -->
   <mat-sidenav #drawer class="sidenav" mode="over">
@@ -52,7 +52,7 @@
     
       <a mat-list-item class="nav-item" href="/incoming-demands">
         <div>
-          <mat-icon matListIcon>inbox</mat-icon>
+          <mat-icon matListIcon>message</mat-icon>
           <span>Incoming</span>
         </div>
       </a>
