--- a/src/app/features/user/user-list/user-list.component.html
+++ b/src/app/features/user/user-list/user-list.component.html
@@ -33,13 +33,13 @@
       
           <!-- Role -->
           <ng-container matColumnDef="role">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
+            <th mat-header-cell *matHeaderCellDef >Role</th>
             <td mat-cell *matCellDef="let user">{{user.userRole}}</td>
           </ng-container>
       
           <!-- Center -->
           <ng-container matColumnDef="center">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Center</th>
+            <th mat-header-cell *matHeaderCellDef >Center</th>
             <td mat-cell *matCellDef="let user">{{user.center?.description}}</td>
           </ng-container>
       
