--- a/src/app/features/user/user-create/user-create.component.html
+++ b/src/app/features/user/user-create/user-create.component.html
@@ -4,10 +4,6 @@
   <form [formGroup]="userForm" class="content">
 
     <div class="form-column">
-        <mat-form-field appearance="outline">
-        <mat-label>Last Name</mat-label>
-        <input matInput formControlName="lastName" />
-        </mat-form-field>
 
         <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
@@ -15,12 +11,21 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input matInput formControlName="lastName" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
         <mat-label>Languages Spoken</mat-label>
-        <mat-select formControlName="languages" multiple>
-          <mat-option *ngFor="let l of languages" [value]="l.id">
-            {{ l.description }}
-          </mat-option>
+         <mat-select
+            formControlName="languages"
+            multiple
+            (selectionChange)="onLanguageChange($event)">
+            <mat-option *ngFor="let l of languages" [value]="l.id">
+              {{ l.description }}
+            </mat-option>
         </mat-select>
+        
   </mat-form-field>
     </div>
 
