--- a/src/app/features/user/user-create/user-create.component.html
+++ b/src/app/features/user/user-create/user-create.component.html
@@ -51,8 +51,10 @@
 
         <mat-form-field appearance="outline">
         <mat-label>Role</mat-label>
-        <mat-select formControlName="userRole">
-            <mat-option *ngFor="let r of roles; index as i" [value]="i">{{ r }}</mat-option>
+        <mat-select 
+          formControlName="userRole" 
+          (selectionChange)="onRoleChange($event)">
+            <mat-option *ngFor="let r of roleOptions" [value]="r.value">{{ r.viewValue }}</mat-option>
         </mat-select>
         </mat-form-field>
   </div>
